feat: Complete GAM line item creation with format extensibility and creative association (#313)
* feat: GAM line item creation with format extensibility and immediate creative association

Implements comprehensive line item creation for Google Ad Manager with advanced
format handling and creative association improvements.

## Line Item Creation (GAM)

**Core Implementation**:
- Full line item creation with targeting, goals, frequency caps, creative placeholders
- Maps AdCP targeting overlay to GAM targeting (geo, device, media type, key-value pairs)
- Supports LIFETIME and DAILY goal types with proper calculation
- Frequency cap conversion (suppress_minutes → GAM time units)
- Naming template integration for orders and line items
- Environment type mapping (video → VIDEO_PLAYER, display/native → BROWSER)

**Targeting Features**:
- Ad unit and placement targeting (fails if not configured - no fallbacks)
- Custom targeting merge (product + buyer AEE signals, buyer takes precedence)
- City/postal targeting fails loudly (not supported by GAM)
- Audience/signal targeting fails with config guidance (needs segment mapping)
- Media type validation and mapping to GAM environmentType

**Error Handling**:
- Fails loudly when can't fulfill buyer contracts (no silent fallbacks)
- Clear error messages with configuration guidance
- Validates format types against product supported_format_types
- Audio formats rejected explicitly (not supported in GAM)

## Format Extensibility System

**Format Resolver** (src/core/format_resolver.py):
- Three-tier format lookup: product override → tenant custom → standard registry
- Database-backed custom formats via creative_formats table
- Product-level format overrides in implementation_config.format_overrides
- Supports platform_config for platform-specific creative mappings

**Platform Config Support**:
- Added platform_config field to Format schema (JSONB in PostgreSQL, TEXT in SQLite)
- Migration 018 adds platform_config column to creative_fo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,7 +76,7 @@ services:
     command: python -m src.admin.server
     environment:
       DATABASE_URL: postgresql://adcp_user:secure_password_change_me@postgres:5432/adcp?sslmode=disable
-      ADMIN_UI_PORT: ${ADMIN_UI_PORT:-8001}
+      ADMIN_UI_PORT: 8001
       FLASK_ENV: production
       FLASK_DEBUG: ${FLASK_DEBUG:-0}
       FLASK_SECRET_KEY: ${FLASK_SECRET_KEY:-dev-secret-key-change-in-production}
@@ -95,9 +95,9 @@ services:
       # Test mode
       ADCP_AUTH_TEST_MODE: ${ADCP_AUTH_TEST_MODE:-false}
 
-      # Server ports for MCP and A2A testing
+      # Server ports - external ports for agent cards
       ADCP_SALES_PORT: ${ADCP_SALES_PORT:-8080}
-      A2A_PORT: ${A2A_PORT:-8094}
+      A2A_PORT: ${A2A_PORT:-8091}
 
       # Skip nginx for standalone service
       SKIP_NGINX: "true"
@@ -107,7 +107,7 @@ services:
         condition: service_healthy
 
     ports:
-      - "${ADMIN_UI_PORT:-8001}:${ADMIN_UI_PORT:-8001}"
+      - "${ADMIN_UI_PORT:-8001}:8001"
 
     volumes:
       # Mount OAuth credentials file
@@ -115,7 +115,7 @@ services:
       - ./audit_logs:/app/audit_logs
 
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:${ADMIN_UI_PORT:-8001}/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
