--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -124,6 +124,14 @@ repos:
         files: ^src/a2a_server/
         pass_filenames: false
 
+      # Audit E2E tests for non-existent tool calls
+      - id: e2e-test-audit
+        name: E2E test contract validation (prevents calling non-existent tools)
+        entry: uv run python scripts/audit_e2e_tests.py
+        language: system
+        pass_filenames: false
+        always_run: true
+
       # Validate A2A AdCP spec compliance (prevents legacy format acceptance)
       - id: a2a-adcp-compliance
         name: A2A AdCP spec compliance validation
