feat: Dynamic format discovery via CreativeAgentRegistry (AdCP v2.4) (#358)
* feat: Add CreativeAgentRegistry for dynamic format discovery

- Add CreativeAgentRegistry with MCP client integration
- Support default agent (creative.adcontextprotocol.org) + tenant-specific agents
- Implement format caching with TTL (1 hour default)
- Add format search across multiple agents
- Add preview generation and generative creative support
- Update Format model per AdCP v2.4 (agent_url, generative type, etc.)
- Add FormatReference model for storing format refs in products
- Update AdCP schemas to latest from registry

* feat: Update Product schema for FormatReference and add migration

- Update Product.formats to support list[FormatReference] | list[str]
- Update format_ids property to handle both formats
- Add Alembic migration to convert existing products
- Migration converts string IDs to {agent_url, format_id} objects
- All existing formats default to creative.adcontextprotocol.org
- Downgrade support included for rollback

* feat: Add format search API endpoints

- Add format_search blueprint with search/list/agents endpoints
- GET /api/formats/search - search formats across all agents
- GET /api/formats/list - list all formats grouped by agent
- GET /api/formats/agents - list registered creative agents
- Register blueprint in admin app
- Uses CreativeAgentRegistry for dynamic format discovery

* feat: Update list_creative_formats and format_resolver to use registry

- Replace FORMAT_REGISTRY lookups with CreativeAgentRegistry
- Update list_creative_formats_impl to fetch from all agents
- Update format_resolver.get_format() to use registry
- Update format_resolver.list_available_formats() to use registry
- Support agent_url parameter in format resolution
- Remove dependencies on FORMAT_REGISTRY constant

* feat: Remove FORMAT_REGISTRY constant and use dynamic discovery

- Delete 650-line FORMAT_REGISTRY constant from schemas.py
- Update get_format_by_id() to use format_reso

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
     command: python -m src.admin.server
     environment:
       DATABASE_URL: postgresql://adcp_user:secure_password_change_me@postgres:5432/adcp?sslmode=disable
-      ADMIN_UI_PORT: 8001
+      ADMIN_UI_PORT: ${ADMIN_UI_PORT:-8001}
       FLASK_ENV: production
       FLASK_DEBUG: ${FLASK_DEBUG:-0}
       FLASK_SECRET_KEY: ${FLASK_SECRET_KEY:-dev-secret-key-change-in-production}
@@ -116,7 +116,7 @@ services:
         condition: service_healthy
 
     ports:
-      - "${ADMIN_UI_PORT:-8002}:8001"
+      - "${ADMIN_UI_PORT:-8001}:${ADMIN_UI_PORT:-8001}"
 
     volumes:
       # Mount OAuth credentials file
@@ -124,7 +124,7 @@ services:
       - ./audit_logs:/app/audit_logs
 
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      test: ["CMD", "sh", "-c", "curl -f http://localhost:$${ADMIN_UI_PORT:-8001}/health"]
       interval: 30s
       timeout: 10s
       retries: 3
