Add pre-commit hook to enforce SQLAlchemy 2.0 patterns
Prevents new code from using legacy session.query() pattern.

- New hook checks all Python files in src/ and product_catalog_providers/
- Fails if legacy session.query() pattern is found in changed files
- Allows existing legacy code with # legacy-ok comment
- Helps prevent the bug we just fixed from recurring

This ensures consistency and prevents stale query issues after connection pool resets.

Note: Mypy errors are pre-existing from merge with main

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,14 @@ repos:
         pass_filenames: false
         always_run: true
 
+      # Enforce SQLAlchemy 2.0 patterns (no legacy session.query)
+      - id: enforce-sqlalchemy-2-0
+        name: Enforce SQLAlchemy 2.0 patterns (no session.query)
+        entry: uv run python .pre-commit-hooks/check_sqlalchemy_2_0.py
+        language: system
+        files: '^(src/|product_catalog_providers/).*\.py$'
+        pass_filenames: true
+
       # Prevent skipping tests (but allow skip_ci for CI-specific issues)
       - id: no-skip-tests
         name: No @pytest.mark.skip decorators allowed
