--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -155,6 +155,14 @@ repos:
         pass_filenames: false
         always_run: true
 
+      # Validate adapter usage (prevents field name mismatches like deliveries → media_buy_deliveries)
+      - id: validate-adapter-usage
+        name: Validate adapter schema field names
+        entry: uv run python scripts/validate_adapter_usage.py
+        language: system
+        files: '^(src/core/main\.py|src/core/schema_adapters\.py)$'
+        pass_filenames: false
+
       # Check Pydantic-AdCP schema alignment (prevents client validation errors like missing promoted_offering)
       - id: pydantic-adcp-alignment
         name: Pydantic model alignment with AdCP schemas (REGRESSION PREVENTION)
