Fix: Integration tests were being skipped in CI
CRITICAL BUG: All integration tests (~46 files) were being SKIPPED
in GitHub Actions CI, meaning integration bugs weren't caught before
production deployment.

Root Cause:
- Fixture checks for ADCP_TEST_DB_URL environment variable
- Local run_all_tests.sh sets ADCP_TEST_DB_URL ✅
- GitHub Actions CI only set DATABASE_URL ❌
- Tests silently skipped with no failure

Impact:
- Missing await bug wasn't caught in CI
- Database integration issues slip through
- A2A/MCP endpoint bugs reach production
- False sense of security from 'passing' CI

Fix (Option 3 - Both):
1. Update integration_db fixture to fallback to DATABASE_URL
2. Update CI workflow to explicitly set ADCP_TEST_DB_URL
3. Both changes for backwards compatibility and clarity

Changes:
- tests/integration/conftest.py: Fallback to DATABASE_URL
- .github/workflows/test.yml: Add ADCP_TEST_DB_URL env var
- INTEGRATION_TESTS_SKIPPED_IN_CI.md: Full analysis document

Verification:
- Local test with DATABASE_URL: ✅ 1 test collected (not skipped)
- CI will now run ~46 integration tests instead of skipping them

Related: The missing await bug in A2A create_media_buy would have
been caught if integration tests were running in CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -225,6 +225,7 @@ jobs:
     - name: Run integration tests
       env:
         DATABASE_URL: postgresql://adcp_user:test_password@localhost:5432/adcp_test
+        ADCP_TEST_DB_URL: postgresql://adcp_user:test_password@localhost:5432/adcp_test
         GEMINI_API_KEY: test_key_for_mocking
         GOOGLE_CLIENT_ID: test_client_id
         GOOGLE_CLIENT_SECRET: test_client_secret
