Speed up pre-commit hooks: 2m14s → 17s (7.8x faster)
Replace slow mypy-diff with mypy-no-regression approach:

**Old approach (mypy-diff)**:
- Checked each changed file individually with mypy
- 2 minutes 14 seconds total
- Goal: Check only changed lines

**New approach (mypy-no-regression)**:
- Runs mypy on entire codebase once
- Only 3 seconds (vs 2+ minutes!)
- Goal: Prevent error count from increasing
- Baseline: 1586 errors (can be improved over time)

**Why this is better**:
- 7.8x faster (17s total vs 2m14s)
- Simpler mental model: "don't make it worse"
- Encourages fixing errors (celebrates decreases)
- Pre-commit hooks should be <20s for good UX

**Usage**:
- Automatic: Runs on any .py file change
- Manual: `uv run python scripts/check_mypy_no_regression.py`
- Update baseline: `--update-baseline` flag when errors decrease

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -245,10 +245,11 @@ repos:
         files: '\.html$'
         pass_filenames: false
 
-      # Check mypy errors on changed lines only (incremental type safety)
-      - id: mypy-diff
-        name: Check mypy errors on changed lines
-        entry: uv run python scripts/check_mypy_diff.py
+      # Check mypy error count doesn't increase (no regression)
+      # Much faster than per-file checks: 3s vs 2+ minutes
+      - id: mypy-no-regression
+        name: Check mypy error count (no regression)
+        entry: uv run python scripts/check_mypy_no_regression.py
         language: system
         files: '\.py$'
         pass_filenames: false
