--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 
 dependencies = [
-    "fastmcp>=2.11.0", # Required for context.get_http_request() support
+    "fastmcp>=2.13.0", # Required for context.get_http_request() support
     "google-generativeai>=0.5.4",
     "google-cloud-iam>=2.19.1",
     "rich>=13.7.1",
@@ -30,8 +30,8 @@ dependencies = [
     "python-socketio>=5.13.0",
     "simple-websocket>=1.1.0",
     "httpx>=0.28.1",
-    "a2a-cli>=0.1.12",
-    "a2a-sdk[http-server]>=0.3.2",
+    "a2a-cli>=0.2.0",
+    "a2a-sdk[http-server]>=0.3.10", # Latest available version
     "jinja2>=3.1.0",
     "prometheus-client>=0.23.1",
 ]
@@ -125,6 +125,7 @@ ignore = [
     "B904",  # raise without from (TODO: fix exception handling)
     "B027",  # empty method in abstract class (TODO: add @abstractmethod)
     "F841",  # unused variables (mostly fixed, remaining are complex)
+    "UP038", # Use (int, float) instead of int | float in isinstance for compatibility
 ]
 
 [tool.ruff.lint.per-file-ignores]
