debug: Add detailed OAuth redirect URI logging and env var documentation
- Add logging for request context (URL, host, scheme)
- Log each step of redirect URI generation
- Add GOOGLE_OAUTH_REDIRECT_URI to .env.example with examples
- Will help diagnose redirect_uri_mismatch errors

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ GEMINI_API_KEY=your-gemini-api-key-here
 GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-client-secret
 
+# OAuth Redirect URI (must match Google OAuth credentials exactly)
+# For production with nginx routing through /admin:
+GOOGLE_OAUTH_REDIRECT_URI=https://sales-agent.scope3.com/admin/auth/google/callback
+# For local development (if using nginx):
+# GOOGLE_OAUTH_REDIRECT_URI=http://localhost/admin/auth/google/callback
+
 # Method 2: File path (legacy - not recommended)
 # GOOGLE_OAUTH_CREDENTIALS_FILE=/path/to/client_secret.json
 
