fix(ci): sync dev dependency group in commitizen workflow
- Changed 'uv sync' to 'uv sync --group dev'
- Ensures commitizen package from dev dependencies is installed
- Fixes 'Failed to spawn: cz' error in CI workflow

--- a/.github/workflows/commitizen-check.yml
+++ b/.github/workflows/commitizen-check.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           export PATH="$HOME/.cargo/bin:$PATH"
-          uv sync
+          uv sync --group dev
 
       - name: Check commits follow conventional commit format
         run: |
