fix(ci): explicitly install commitizen in workflow
- Added 'uv pip install commitizen' step
- Fixes compatibility issue with uv 0.4.18 which doesn't support --group flag
- Ensures commitizen is available for commit message validation

--- a/.github/workflows/commitizen-check.yml
+++ b/.github/workflows/commitizen-check.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Install dependencies
         run: |
           export PATH="$HOME/.cargo/bin:$PATH"
-          uv sync --group dev
+          uv sync
+          uv pip install commitizen
 
       - name: Check commits follow conventional commit format
         run: |
