--- a/.env.example
+++ b/.env.example
@@ -16,21 +16,23 @@ GOOGLE_CLIENT_SECRET=your-client-secret
 # ============================================
 # DOMAIN CONFIGURATION
 # ============================================
+# Defaults to scope3.com for backwards compatibility with existing deployments.
+# Change these to your own domain when deploying to a new environment.
 
-# Your base domain (e.g., example.com, yourdomain.com)
-BASE_DOMAIN=example.com
+# Your base domain (e.g., scope3.com, yourdomain.com)
+BASE_DOMAIN=scope3.com
 
 # Sales agent domain (full domain for the sales agent server)
 # Format: <subdomain>.<base_domain> or just <base_domain>
-SALES_AGENT_DOMAIN=sales-agent.example.com
+SALES_AGENT_DOMAIN=sales-agent.scope3.com
 
 # Admin domain (subdomain for admin UI)
 # Format: <admin-subdomain>.<sales_agent_domain>
-ADMIN_DOMAIN=admin.sales-agent.example.com
+ADMIN_DOMAIN=admin.sales-agent.scope3.com
 
 # Domain for super admin email addresses
 # Super admins from this domain get full access across all tenants
-SUPER_ADMIN_DOMAIN=example.com
+SUPER_ADMIN_DOMAIN=scope3.com
 
 # OAuth Redirect URI (must match Google OAuth credentials exactly)
 # For production with nginx routing through /admin:
