audit: ensure all GAM endpoints support both OAuth and service account auth
Completed comprehensive audit of all files creating GAM clients to ensure they
support BOTH OAuth refresh tokens AND service account authentication.

## Audit Results
- ✅ All production endpoints support both auth methods
- ✅ OAuth-only endpoints are intentional (setup/testing in api.py, gam.py)
- ✅ 1 issue found and fixed: inventory.py:get_targeting_values() (commit 8cc6c7e5)

## Prevention: New Pre-commit Hook
Created `.pre-commit-hooks/check-gam-auth-support.py` to catch this pattern:
- Detects new code creating GAM clients
- Ensures they check for BOTH auth methods
- Allows exceptions for setup/testing endpoints
- Provides helpful error messages with examples

## Files Audited
- src/services/background_sync_service.py ✅ (supports both)
- src/adapters/gam/auth.py ✅ (supports both via GAMAuthManager)
- src/adapters/gam/client.py ✅ (uses GAMAuthManager)
- src/admin/blueprints/gam.py ✅ (supports both)
- src/admin/blueprints/inventory.py ✅ (fixed in this PR)
- src/admin/blueprints/api.py ⚠️ (OAuth-only by design)
- src/adapters/gam/utils/health_check.py ✅ (service account only)

See AUDIT_RESULTS.md for full details.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,14 @@ repos:
         pass_filenames: false
         always_run: true
 
+      # Ensure GAM clients support both OAuth and service account auth
+      - id: check-gam-auth-support
+        name: Check GAM client supports both auth methods
+        entry: uv run python .pre-commit-hooks/check-gam-auth-support.py
+        language: system
+        files: '^src/.*\.py$'
+        pass_filenames: false
+
       # Enforce SQLAlchemy 2.0 patterns (no legacy session.query)
       - id: enforce-sqlalchemy-2-0
         name: Enforce SQLAlchemy 2.0 patterns (no session.query)
