--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ extend-exclude = '''
   | buck-out
   | build
   | dist
+  | alembic/versions  # Never format migration files
 )/
 '''
 
@@ -116,6 +117,7 @@ exclude = [
     "buck-out",
     "build",
     "dist",
+    "alembic/versions",  # Never format migration files
 ]
 
 [tool.ruff.lint]
