Fix CI cache to ensure adcp 2.5.0 is installed
- Remove restore-keys fallback that was loading old cache with adcp 2.4.x
- Add v2 suffix to cache key to force cache invalidation
- This ensures CI installs adcp 2.5.0 which removes is_fixed field

All 51+ test failures were caused by CI using cached adcp 2.4.x that
requires is_fixed field. Our code correctly removed is_fixed to match
adcp 2.5.0 discriminated union classes.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,9 +35,7 @@ jobs:
         path: |
           ~/.cache/uv
           .venv
-        key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-uv-
+        key: ${{ runner.os }}-uv-v2-${{ hashFiles('**/uv.lock') }}
 
     - name: Install dependencies
       run: |
@@ -84,9 +82,7 @@ jobs:
         path: |
           ~/.cache/uv
           .venv
-        key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-uv-
+        key: ${{ runner.os }}-uv-v2-${{ hashFiles('**/uv.lock') }}
 
     - name: Install dependencies
       run: |
@@ -142,9 +138,7 @@ jobs:
         path: |
           ~/.cache/uv
           .venv
-        key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-uv-
+        key: ${{ runner.os }}-uv-v2-${{ hashFiles('**/uv.lock') }}
 
     - name: Install dependencies
       run: |
@@ -215,9 +209,7 @@ jobs:
         path: |
           ~/.cache/uv
           .venv
-        key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-uv-
+        key: ${{ runner.os }}-uv-v2-${{ hashFiles('**/uv.lock') }}
 
     - name: Install dependencies
       run: |
@@ -272,9 +264,7 @@ jobs:
         path: |
           ~/.cache/uv
           .venv
-        key: ${{ runner.os }}-uv-${{ hashFiles('**/uv.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-uv-
+        key: ${{ runner.os }}-uv-v2-${{ hashFiles('**/uv.lock') }}
 
     - name: Install dependencies
       run: |
