--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "types-pytz>=2025.2.0.20250809",
     "markdown>=3.4.0",
     "types-Markdown>=3.4.2.10",
+    "freezegun>=1.5.5",
 ]
 
 
