fix: e2e test context initialization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,12 @@ services:
       # Create sample data for E2E tests (products, etc.)
       CREATE_SAMPLE_DATA: ${CREATE_SAMPLE_DATA:-true}
 
+      # Delivery webhook scheduler interval (default 1 hour)
+      DELIVERY_WEBHOOK_INTERVAL: ${DELIVERY_WEBHOOK_INTERVAL:-3600}
+
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
     depends_on:
       postgres:
         condition: service_healthy
